[package]
name = "csgo_trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.1"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
num = "0.4.0"
rand = "0.8.5"
regex = "1.8.2"
reqwest = "0.11.18"
rsa = "0.9.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
steam_guard = "1.0.1"
tokio = { version = "1.28.1", features = ["full"] }
